<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/blue_sky">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="monospace"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/revi" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:fontFamily="monospace"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_margin="18dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="monospace"
                    android:text="@string/desc"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="monospace"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/desc_isi"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_desc"
            android:layout_margin="18dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="10dp"
                >
                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textSize="18sp"
                    android:fontFamily="monospace"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="8dp">
                    <!-- No Tlp -->
                    <ImageView
                        android:id="@+id/image_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_call"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:id="@+id/no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="085659431655"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="monospace"
                        android:autoLink="phone"
                        android:linksClickable="true"
                        android:clickable="true"
                        android:focusable="true"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="8dp">
                    <!-- Email -->
                    <ImageView
                        android:id="@+id/image_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_email"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:id="@+id/email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="monospace"
                        android:autoLink="email"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="8dp">
                    <!-- IG -->
                    <ImageView
                        android:id="@+id/image_ig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_ig"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:id="@+id/ig_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ig"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="monospace"
                        android:autoLink="web"/>

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_contact"
            android:layout_margin="18dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/maps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find"
                    android:textSize="18sp"
                    android:fontFamily="monospace"
                    android:textStyle="bold"/>

                <org.osmdroid.views.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_map"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="30sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
